# Tankist-Urho3D-

./: .gitignore
doc/: LauncherFunctionallity.txt  TerminalFunctionallity.txt  compilation.txt
doc/doxygen/: Tankist.doxy
nsis/: Launcher.nsi  Tankist.nsi  TankistWaTclient.nsi  clear.bat
scripts/: buildUrho3D.bat  list_files.py
scripts/linux/: runTankist.sh  update.sh
server/: CMakeLists.txt  build.sh  buildTankist.sh
site/tankistwat/tankistwat/templates/: index.html
source/Tankist/: Tankist.sln
source/Tankist/Launcher/: Launcher.vcxproj  Launcher.vcxproj.filters
source/Tankist/Launcher/src/: GlobalVars.cpp  GlobalVars.h  Launcher.cpp  NetworkThread.cpp  NetworkThread.h  defines.h  stdafx.h
source/Tankist/Tankist/: Tankist.vcxproj  Tankist.vcxproj.filters  TankistWaT.vcxproj.filters
source/Tankist/Tankist/src/: CameraUni.cpp  CameraUni.h  ChatLog.cpp  ChatLog.h  Client.cpp  Client.h  CommonFunctions.cpp  CommonFunctions.h  Counters.cpp  CreateScene.inl  Game.cpp  Game.h  GlobalVars.cpp  (+18 more)
source/Tankist/Terminal/: Terminal.vcxproj  Terminal.vcxproj.filters
source/Tankist/common/: CommonDefines.h  CommonFunctions.cpp  CommonFunctions.h  defines.h
source/VehicleDemo/: 19_VehicleDemo.vcxproj  19_VehicleDemo.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
source/VehicleDemo/src/: Sample.inl  Tank.cpp  Tank.h  Tank_.cpp  Tank_.h  Vehicle.cpp  Vehicle.h  VehicleDemo.cpp  VehicleDemo.h
source/uploader/: downloader.py  files_new.txt  readme.txt  startUploader.sh  uploader.py
(+87 files in other folders)
