project(TankistWaT)
cmake_minimum_required(VERSION 2.6)
set (CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
file (GLOB CPPS "../source/TankistWat/TankistWaT/src/*.cpp")
add_definitions(-O3 -std=c++11 -march=native -ffast-math -pthread -Wno-invalid-offsetof)
include_directories(Tankist ../urho3D/build/include/ ../urho3D/build/include/Urho3D/ThirdParty)
add_executable(TankistWaT ${CPPS})
target_link_libraries(TankistWaT ${CMAKE_CURRENT_SOURCE_DIR}/libUrho3D.a -ldl -lm -lrt -lGL -pthread)
install(TARGETS ${PROJECT_NAME} DESTINATION bin)
